# pgrubic

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  backlog.md  data.json  index.html  objects.inv  pgrubic.toml  pgshield.toml  pyproject.toml  test.sql  test2.sql
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  dependency-review.yml  doc.yml  docs.yml  labeler.yml  release.yml
cli/: index.html
configuration/: index.html
contributing/: index.html
css/: extra.css
docs/: __init__.py  docs_generator.py  mkdocs.yml  rule_docs_generator.py  rule_metadata_generator.py  rules.py  settings_doc_generator.py
docs/docs/: cli.md  configuration.md  contributing.md  formatter.md  index.md  license.md  linter.md  rules.md  settings.md  tutorial.md
docs/docs/css/: extra.css
docs/docs/rules/: identifier.md  unsafe.md
formatter/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_14d1f364cde77cfc_QY001_py.html  z_14d1f364cde77cfc_QY002_py.html  z_2984982153baaf66_CT001_py.html  z_2984982153baaf66_CT002_py.html  z_2984982153baaf66_CT003_py.html  z_2984982153baaf66_CT004_py.html  z_2984982153baaf66_CT005_py.html  z_2984982153baaf66_CT006_py.html  z_36c24e54554e13e7___init___py.html  z_36c24e54554e13e7___main___py.html  z_377012198204e838_SM001_py.html  z_377012198204e838_SM002_py.html  z_3b19492a7f108ba9_boolean_py.html  z_3b19492a7f108ba9_cte_py.html  z_3b19492a7f108ba9_delete_py.html  z_3b19492a7f108ba9_insert_py.html  z_3b19492a7f108ba9_join_py.html  z_3b19492a7f108ba9_select_py.html  z_3b19492a7f108ba9_update_py.html  z_544d3a3237b9df60_functions_py.html  z_5f48db09218fe9d4_GN001_py.html  z_5f48db09218fe9d4_GN002_py.html  z_5f48db09218fe9d4_GN003_py.html  z_5f48db09218fe9d4_GN004_py.html  z_5f48db09218fe9d4_GN005_py.html  z_5f48db09218fe9d4_GN006_py.html  z_5f48db09218fe9d4_GN007_py.html  z_5f48db09218fe9d4_GN008_py.html  z_5f48db09218fe9d4_GN009_py.html  z_5f48db09218fe9d4_GN010_py.html  z_5f48db09218fe9d4_GN011_py.html  z_5f48db09218fe9d4_GN012_py.html  z_5f48db09218fe9d4_GN013_py.html  z_5f48db09218fe9d4_GN014_py.html  z_5f48db09218fe9d4_GN015_py.html  z_5f48db09218fe9d4_GN016_py.html  (+114 more)
license/: index.html
linter/: index.html
rules/: index.html
rules/constraint/cascade-delete/: index.html
rules/constraint/cascade-update/: index.html
rules/constraint/duplicate-primary-key-column/: index.html
rules/constraint/duplicate-unique-key-column/: index.html
rules/constraint/identity-generated-by-default/: index.html
rules/constraint/remove-constraint/: index.html
rules/general/astar/: index.html
rules/general/asterisk/: index.html
rules/general/constant-generated-column/: index.html
rules/general/create-enum/: index.html
rules/general/create-rule/: index.html
rules/general/current-time/: index.html
rules/general/delete-without-where-clause/: index.html
rules/general/drop-cascade/: index.html
rules/general/duplicate-column/: index.html
rules/general/duplicate-index/: index.html
rules/general/duplicate-index-column/: index.html
rules/general/id-column/: index.html
rules/general/index-elements-more-than-three/: index.html
search/: search_index.json
settings/: index.html
src/: example.sql  new.sql  test.py  test.sql  test2.sql
src/pgrubic/: __init__.py  __main__.py  ideas.txt  node_location.md  pgrubic.toml
src/pgshield/: .pgshield  __init__.py  __main__.py  check2.py  checks.py  config.py  default_config.cfg  errors.py  formatter.py  ideas.txt  linter.py  logging.py  pgshield.toml  test.py  test1.py  test3.py  utils.py
tests/: __init__.py  conftest.py  test_UN001.py  test_cache.py  test_cli.py  test_config.py  test_do_block.py  test_enhanced_string_parsing.py  test_entry.py  test_filters.py  test_format.py  test_formatters.py  test_linter.py  test_loader.py  test_noqa.py  test_pglogical_do_blocks.py  test_rules.py
tests/constraint/: __init__.py  test_CST001.py  test_CST002.py  test_CST003.py  test_CST004.py
tests/general/: __init__.py  test_GN001.py  test_GN002.py  test_GN003.py  test_GN004.py  test_GN005.py  test_GN006.py  test_GN007.py  test_GN008.py  test_GN009.py  test_GN010.py  test_GN011.py  test_GN012.py  test_GN013.py  test_GN014.py  test_GN015.py  test_GN016.py  test_GN017.py  test_GN018.py  test_GN019.py  test_GN020.py  test_GN021.py  test_GN022.py  test_GN023.py  test_GN024.py  test_GN025.py  test_GN026.py  test_GN027.py  test_GN028.py  test_GN029.py
tests/naming/: __init__.py  test_NM001.py  test_NM002.py  test_NM003.py  test_NM004.py  test_NM005.py  test_NM006.py  test_NM007.py  test_NM008.py  test_NM009.py  test_NM010.py  test_NM011.py  test_NM012.py  test_NM013.py  test_NM014.py  test_NM015.py  test_NM016.py
tests/schema/: __init__.py  test_SCM001.py  test_SCM002.py
tests/security/: test_ST001.py  test_ST002.py
tests/typing/: __init__.py  test_TP001.py  test_TP002.py  test_TP003.py  test_TP004.py  test_TP005.py  test_TP006.py  test_TP007.py  test_TP008.py  test_TP009.py  test_TP010.py  test_TP011.py  test_TP012.py  test_TP013.py  test_TP014.py  test_TP015.py  test_TP016.py  test_TP017.py  test_TP018.py
tests/unsafe/: __init__.py  test_UN001.py  test_UN002.py  test_UN003.py  test_UN004.py  test_UN005.py  test_UN006.py  test_UN007.py  test_UN008.py  test_UN009.py  test_UN010.py  test_UN011.py  test_UN012.py  test_UN013.py  test_UN014.py  test_UN015.py  test_UN016.py  test_UN017.py  test_UN018.py  test_UN019.py  test_UN020.py  test_UN021.py  test_UN022.py  test_UN023.py  test_UN024.py  test_UN025.py  test_UN026.py  test_UN027.py  test_UN028.py  test_UN029.py  test_US001.py  test_US002.py  test_US003.py  test_US004.py  test_US005.py  test_US006.py  test_US007.py  test_US008.py  test_US009.py  test_US010.py  (+19 more)
tools/: ensure_up_to_date_docs.sh  prepare_release.sh
tutorial/: index.html
(+809 files in other folders)
