[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pgshield" = ["pgshield.toml"]

# [tool.setuptools]
# packages = ["pgshield"]

# [tool.setuptools.find]
# where = "src"

# [tool.setuptools.packages.find]
# where = ["."]
# exclude = ["src"]
# include = ["pgshield"]
# namespaces = true

[project]
name = "pgshield"
version = "0.0.1"
description = "Data migrations for PostgreSQL databases"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
authors = [
  {name = "DBA Team", email = "dataengineering-dba@n26.com"},
]
maintainers = [
  {name = "DBA Team", email = "dataengineering-dba@n26.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers :: Data Engineers :: DBAs",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: SQL",
    "Topic :: Utilities :: Data Migrations",
]
keywords = [
    "pgshield",
    "sql",
    "postgres",
    "postgresql",
    "mysql",
    "oracle",
    "tsql",
    "tds",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff",
]

[project.urls]
Homepage = "https://github.com/n26/pgshield"
Documentation = "https://github.com/n26/pgshield/blob/master/README.md"
Repository = "https://github.com/n26/pgshield"
"Issue Tracker" = "https://github.com/n26/pgshield/issues"
Changelog = "https://github.com/n26/pgshield/blob/master/CHANGELOG.md"

[project.scripts]
pgshield = "pgshield.__main__:cli"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
strict_equality = true
extra_checks = true
show_error_codes = true
no_implicit_reexport = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["ANN101", "ANN102", "N802", "ARG002", "ANN401", "D205", "N999"]
line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
length-sort = true
known-first-party = ["pgshield"]

[tool.isort]
profile = "black"
length_sort = true
known_first_party = "pgshield"

[tool.djlint]
profile="jinja"
use_gitignore=true
