[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pgrubic" = ["pgrubic.toml"]

[project]
name = "pgrubic"
version = "0.0.1"
description = "PostgreSQL linter for schema migrations and design best practices"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [{ name = "Bolaji Wahab", email = "bolajiwahab23@gmail.com" }]
maintainers = [{ name = "Bolaji Wahab", email = "bolajiwahab23@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers :: Engineers :: DBAs",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: SQL",
  "Topic :: Utilities :: PostgreSQL Linter",
]
keywords = ["pgrubic", "sql", "postgres", "postgresql", "linter"]
dependencies = [
  "pglast==6.3",
  "case-converter==1.1.0",
  "colorama==0.4.6",
  "toml==0.10.2",
  "types-toml==0.10.8",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy",
  "isort",
  "pre-commit",
  "pytest",
  "coverage",
  "tox",
]

[project.urls]
Homepage = "https://github.com/bolajiwahab/pgrubic"
Documentation = "https://github.com/bolajiwahab/pgrubic/blob/master/README.md"
Repository = "https://github.com/bolajiwahab/pgrubic"
"Issue Tracker" = "https://github.com/bolajiwahab/pgrubic/issues"
Changelog = "https://github.com/bolajiwahab/pgrubic/blob/master/CHANGELOG.md"

[project.scripts]
pgrubic = "pgrubic.__main__:cli"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
strict_equality = true
extra_checks = true
show_error_codes = true
no_implicit_reexport = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["ANN101", "ANN102", "N802", "ARG002", "ANN401", "D205", "N999"]
line-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
length-sort = true
known-first-party = ["pgrubic"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # asserts allowed in tests...
]

[tool.isort]
profile = "black"
length_sort = true
known_first_party = "pgrubic"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list =
        py312
        type

    [testenv]
    deps = pytest
    commands = pytest tests

    [testenv:type]
    deps = mypy
    commands = mypy
"""
