[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pgrubic" = ["pgrubic.toml"]

[project]
name = "pgrubic"
version = "1.0.0"
description = "PostgreSQL linter for schema migrations and design best practices"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [{ name = "Bolaji Wahab", email = "bolajiwahab23@gmail.com" }]
maintainers = [{ name = "Bolaji Wahab", email = "bolajiwahab23@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers :: Engineers :: DBAs",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: SQL",
  "Topic :: Utilities :: PostgreSQL Linter",
]
keywords = ["pgrubic", "sql", "postgres", "postgresql", "linter"]
dependencies = [
  "pglast==6.3",
  "case-converter==1.1.0",
  "colorama==0.4.6",
  "toml==0.10.2",
]

[project.optional-dependencies]
dev = [
  "ruff==0.6.2",
  "black==24.8.0",
  "mypy==1.11.2",
  "isort==5.13.2",
  "add-trailing-comma==3.1.0",
  "pre-commit==3.8.0",
  "pytest==7.4.3",
  "coverage==7.6.1",
  "tox==4.18.0",
  "pre-commit==3.8.0",
]

doc = [
  "mkdocs==1.6.0",
  "mkdocs-material==9.5.33",
  "mkdocstrings==0.25.2",
  "mkdocstrings-python==1.10.8",
]

[project.urls]
Homepage = "https://github.com/bolajiwahab/pgrubic"
Documentation = "https://github.com/bolajiwahab/pgrubic/blob/master/README.md"
Repository = "https://github.com/bolajiwahab/pgrubic"
"Issue Tracker" = "https://github.com/bolajiwahab/pgrubic/issues"
Changelog = "https://github.com/bolajiwahab/pgrubic/blob/master/CHANGELOG.md"

[project.scripts]
pgrubic = "pgrubic.__main__:cli"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
strict_equality = true
extra_checks = true
show_error_codes = true
no_implicit_reexport = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["pglast.*", "caseconverter.*", "pgrubic.*"]
ignore_missing_imports = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["ANN101", "ANN102", "N802", "ARG002", "ANN401", "D205", "N999"]
line-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
length-sort = true
known-first-party = ["pgrubic"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # asserts allowed in tests...
]
"*formatters/**/*.py" = [
  "PLR0915",
  "PLR0912",
  "C901",
]

[tool.isort]
profile = "black"
length_sort = true
known_first_party = "pgrubic"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
  "**/formatters/**", # excluded for now
  "formatter.py",
  "tests/*"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py312
        isort
        linting
        yamllint
        formatting
        typing
        tests
        coverage
        docbuild

    [testenv]
    skip_install = true
    deps =
    commands =

    [testenv:tests]
    skip_install = false
    deps =
        pytest
        coverage
    setenv =
        COVERAGE_FILE = .coverage
    commands =
        coverage erase
        coverage run --source=src -m pytest tests

    [testenv:coverage]
    skip_install = false
    deps = {[testenv:tests]deps}
    setenv =
        COVERAGE_FILE = .coverage
    commands =
        {[testenv:tests]commands}
        coverage report --fail-under=100 --show-missing

    [testenv:isort]
    deps = isort
    commands = isort --check --diff --profile=black src

    [testenv:linting]
    deps = ruff
    commands = ruff check .

    [testenv:formatting]
    deps = black
    commands = black .

    [testenv:typing]
    deps =
        mypy
        pytest
        types-toml
        types-colorama
    commands = mypy src tests docs

    [testenv:docbuild]
    commands =
        # We need to build the project in order to generate the docs.
        # Hence it fails with import errors.
        pip install -e .
        python docs/rule_docs_generator.py

    [testenv:ensure-docs-up-to-date]
    allowlist_externals = ./tools/ensure_up_to_date_docs.sh
    commands =
        {[testenv:docbuild]commands}
        ./tools/ensure_up_to_date_docs.sh

    [testenv:yamllint]
    deps = yamllint
    commands = yamllint .

    [testenv:pre-commit]
    deps = pre-commit
    commands =
        pre-commit {posargs:run --all-files}

    [testenv:build-dist]
    deps = build
    commands =
        python -m build --sdist --wheel {posargs: {toxinidir}}
"""
